--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ img{
 }
 .section-heading{
     text-align: center;
-    margin-bottom: 10rem;
+    margin-bottom: 6rem;
 }
 .section-heading h1{
     font-size: 4rem;
@@ -189,8 +189,8 @@ li{
     z-index: 1;
 }
 .landing-text h1 {
-    font-size: 10rem;
-    font-family: 'Abril Fatface', cursive;
+    font-size: 12rem;
+    font-family: 'Kaushan Script', cursive;
     letter-spacing: 3px;
     /* background: linear-gradient(to top,#a3d6c9, #0A4F63); 
     -webkit-background-clip: text;
@@ -280,18 +280,21 @@ li{
 
 /*Start services*/
 .my-skills{
-    margin-top: 10rem;
+    /* margin-top: 10rem; */
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap:2.5rem;
-    text-align: center;
+    text-align: justify;
+   padding: 2rem;
+   margin-bottom: 6rem;
 }
 .skill{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding: 2rem;
+    height:200px;
+    
 }
 .skill h1 {
     text-transform: uppercase;
